# interactive-ml

./: .gitignore  README.md  make.rb  spm-packages.sjson
achieved_results/Castle/: AO_Castle.exr  Output_Castle.exr
achieved_results/LondonApartment/: Output_LA.exr
achieved_results/Tree/: groundtruth_rock_200.exr  input_rock_200.exr  output_rock_200.exr
cmake/: CMakeMacros.cmake  CMakePlugin.cmake
engine/: CMakeLists.txt  plugin_hook.cpp  tf_cuda.cpp  tf_cuda.h  tf_kernel.cpp  tf_kernel.h  tf_lua.cpp  tf_lua.h  tf_plugin.cpp  tf_plugin.h  tf_settings.h
engine/kernels/: mandelbrot.cu.cc  texture_2d.cu.cc  tf_kernel.cu.cc
engine/utilities/: cuda_kernel_helper.h
plugin/: interactiveML.stingray_plugin
plugin/ml_resources/: interactive_ml.package  interactive_ml.render_config_extension
python/: AO_pot_512.exr  Input_pot_512.exr  NullOp.pb  Output_pot.exr  assemble_graph.py  convert_images.py  editing.pb  export_network.py  frozen_1024x1024.pb  frozen_1515360191.pb  frozen_1515691477.pb  frozen_1920x1072.pb  frozen_512x256.pb  frozen_512x512.pb  frozen_640x368.pb  frozen_768x512.pb  frozen_960x512.pb  frozen_last.pb  learn_models.txt  learn_models2.txt  models.txt  nnao_graph.pbtxt  nnao_graph_1024x1024.pbtxt  nnao_graph_1920x1072.pbtxt  nnao_graph_512x256.pbtxt  nnao_graph_512x512.pbtxt  nnao_graph_640x368.pbtxt  nnao_graph_768x512.pbtxt  nnao_network.py  simple_network_001.py  test.exr  test_network.py  train_network.py
python/checkpoints/: checkpoint  frozen_1515694274.pb  frozen_1515937755.pb  frozen_1516667685.pb  frozen_1516838921.pb  frozen_1516841452.pb  one_img_1516255493.ckpt.data-00000-of-00001  one_img_1516255493.ckpt.index  one_img_1516417164.ckpt.data-00000-of-00001  one_img_1516417164.ckpt.index  one_img_1516667685.ckpt.data-00000-of-00001  one_img_1516667685.ckpt.index  one_img_1516838473.ckpt.data-00000-of-00001  one_img_1516838473.ckpt.index  one_img_1516838921.ckpt.data-00000-of-00001  one_img_1516838921.ckpt.index  one_img_1516840137.ckpt.data-00000-of-00001  one_img_1516840137.ckpt.index  one_img_1516841452.ckpt.data-00000-of-00001  one_img_1516841452.ckpt.index  one_img_1516849221.ckpt.data-00000-of-00001  one_img_1516849221.ckpt.index  tmp1515360191.ckpt.data-00000-of-00001  tmp1515360191.ckpt.index  tmp1515691477.ckpt.data-00000-of-00001  tmp1515691477.ckpt.index  tmp1515694274.ckpt.data-00000-of-00001  tmp1515694274.ckpt.index  tmp1515876877.ckpt.data-00000-of-00001  tmp1515876877.ckpt.index  tmp1515879547.ckpt.data-00000-of-00001  tmp1515879547.ckpt.index  tmp1515937755.ckpt.data-00000-of-00001  tmp1515937755.ckpt.index  tmp1516037313.ckpt.data-00000-of-00001  tmp1516037313.ckpt.index  train_nnao_27_1_18_58_epoch_1.ckpt.data-00000-of-00001  train_nnao_27_1_18_58_epoch_1.ckpt.index  train_nnao_27_1_18_58_epoch_2.ckpt.data-00000-of-00001  train_nnao_27_1_18_58_epoch_2.ckpt.index  (+12 more)
python/helper/: constants.py  load_data.py  save_data.py
tools/: common.rb  tf_interactive_ops.cmake
(+3 files in other folders)
